fix weird spacing

--- a/modules/home/waybar/config/jet/style.css
+++ b/modules/home/waybar/config/jet/style.css
@@ -83,7 +83,7 @@ window#waybar {
 }
 /* Windows 95 style clock */
 #clock {
-    margin: 2px 2px 2px 16px;
+    margin: 2px 1px 2px 16px;
     padding: 4px 8px;
     border-radius: 0;
     background-color: @base;
